[package]
name = "dumpy"
version = "0.5.0-dev.1"
edition = "2021"
authors = ["Tijmen van der Spijk <tijmen.van.der.spijk@vooruit.nl>"]
homepage = "https://github.com/cyberschuur/dumpy"
license = "MIT"
description = "A web frontend for filtering the PCAPs from the Suricata full packet capture"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", default-features = false, features = ["json", "form", "query"] }
axum-server = { version = "0.7.0", default-features = false, features = ["tls-rustls"] }
base64 = { version = "0.22", default-features = false }
bcrypt = { version = "0.17", default-features = false, features = ["std"] }
clap = { version = "4.5", default-features = false, features = ["std", "derive", "color", "help", "usage"] }
futures-util = { version = "0.3", default-features = false }
lazy_static = "1.5.0"
mime_guess = { version = "2.0", default-features = false }
pcap = { version = "2.2", default-features = false }
regex = { version = "1.11", default-features = true }
rust-embed = { version = "8.7", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = [] }
serde_yaml = { version = "0.9", default-features = false, features = [] }
thiserror = "2.0"
time = { version = "0.3", default-features = false, features = ["parsing", "local-offset", "macros"] }
tokio = { version = "1.44", default-features = false, features = ["macros", "rt-multi-thread", "full"] }
tokio-stream = { version = "0.1", default-features = false, features = [] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
tracing = { version = "0.1", default-features = false, features = [] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["json", "fmt", "ansi", "time"] }
